# ESP32CommandStation

./: .gitignore  .gitmodules  CMakeLists.txt  ESP32-CS-BOM.html  ESP32CS-S3-partitions.csv  ESP32CS-partitions.csv  README-cmake.md  README.md  _config.yml  build_index_header.py  building-esp32cs-idf.md  building-esp32cs.md  config-lcc.md  config-lcd.md  config-loconet.md  config-motorboard.md  config-nextion.md  config-oled.md  config-s88.md  config-wifi.md  cs-THT-v2.0-bom.html  cs-v2.0-THT-BOM.html  esp32-cs-pcb-THT.md  esp32-cs-pcb.md  file2header.py  index.md  lcc-events.md  pcb-BOM.html  pinmap.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.defaults.pcb  supported-motorboards.md  todo.md
components/AccessoryDecoderDB/: AccessoryDecoderConstants.cpp  AccessoryDecoderDB.cpp  CMakeLists.txt  DccAccessoryDecoder.cpp  OpenLCBAccessoryDecoder.cpp  idf_component.yml
components/AccessoryDecoderDB/include/: AccessoryDecoderDataTypes.hxx  AccessoryDecoderDatabase.hxx
components/AccessoryDecoderDB/private_include/: DccAccessoryDecoder.hxx  OpenLCBAccessoryDecoder.hxx
components/DCC/: CMakeLists.txt  DCCSignalVFS.cpp  DccConstants.cpp  PrioritizedUpdateLoop.cpp  current_sense.S
components/DCC/include/: DCCSignalVFS.hxx  TrackOutputDescriptor.hxx
components/DCC/private_include/: Esp32RailComDriver.hxx  PrioritizedUpdateLoop.hxx  RMTTrackDevice.hxx  TrackPowerHandler.hxx
components/HttpServer/: CMakeLists.txt  Kconfig  LICENSE  README.md
components/HttpServer/include/: Dnsd.h  HttpStringUtils.h  Httpd.h
components/HttpServer/src/: Dnsd.cpp  HttpRequest.cpp  HttpRequestFlow.cpp  HttpRequestWebSocket.cpp  HttpResponse.cpp  HttpServer.cpp  HttpdConstants.cpp
components/NeoPixelBus/: CMakeLists.txt  ReadMe.md  keywords.txt  library.json
components/NeoPixelBus/src/: NeoPixelAnimator.h  NeoPixelBrightnessBus.h  NeoPixelBus.h
components/NeoPixelBus/src/internal/: DotStarColorFeatures.h  DotStarEsp32DmaSpiMethod.h  DotStarGenericMethod.h  Esp32_i2s.c  Esp32_i2s.h  HsbColor.cpp  HsbColor.h  HslColor.cpp  HslColor.h  HtmlColor.h  (+49 more)
components/NvsManager/: CMakeLists.txt  NvsManager.cpp
components/NvsManager/include/: NvsManager.hxx
components/NvsManager/private_include/: AbstractVirtualMemorySpace.hxx  FastClockMemoryConfigSpace.hxx  NodeIdMemoryConfigSpace.hxx  NvsManagerStruct.hxx  RealTimeClockMemoryConfigSpace.hxx  WiFiMemoryConfigSpace.hxx
components/OpenMRNExtensions/: CMakeLists.txt  idf_component.yml
components/OpenMRNLite/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  keywords.txt  library.json  library.properties
components/OpenMRNLite/src/: CDIHelper.hxx  OpenMRNLite.cpp  OpenMRNLite.h  bootloader_hal.h  can_frame.h  can_ioctl.h  ifaddrs.h  library.properties  nmranet_config.h  openmrn_features.h  stropts.h
components/StatusDisplay/: CMakeLists.txt  Kconfig.projbuild  StatusDisplay.cpp  StatusDisplayLCD.cpp  StatusDisplayOLED.cpp  idf_component.yml
components/StatusDisplay/include/: BoldOLEDFont.h  StatusDisplay.h  StatusDisplay.hxx  ThinOLEDFont.h
components/StatusLED/: CMakeLists.txt  Kconfig.projbuild  StatusLED.cpp  StatusLEDGpio.cpp  StatusLEDNeoPixel.cpp
components/StatusLED/include/: StatusLED.h  StatusLED.hxx
components/TrainDatabase/: CMakeLists.txt  Esp32TrainDatabase.cpp  Esp32TrainDbEntry.cpp  Kconfig.projbuild  TrainDatabase.cpp
components/TrainDatabase/include/: TrainDatabase.h  TrainDatabase.hxx
components/TrainManager/: CMakeLists.txt  FdiXmlGenerator.cpp  LazyInitTrainNode.cpp  PersistentTrainConfigSpace.cpp  TrainCDISpace.cpp  TrainFDISpace.cpp  TrainIdentifyHandler.cpp  TrainManager.cpp  TrainPipHandler.cpp  TrainSnipHandler.cpp  XmlGenerator.cpp
components/TrainManager/include/: TrainManager.hxx
components/TrainManager/private_include/: FdiXmlGenerator.hxx  LazyInitTrainNode.hxx  PersistentTrainConfigSpace.hxx  TrainCDISpace.hxx  TrainFDISpace.hxx  TrainIdentifyHandler.hxx  TrainPipHandler.hxx  TrainSnipHandler.hxx  XmlGenerator.hxx
components/TrainSearchProtocol/: AllTrainNodes.cpp  CMakeLists.txt  FdiXmlGenerator.cpp  FindProtocolDefs.cpp  XmlGenerator.cpp
components/TrainSearchProtocol/include/: AllTrainNodes.hxx  AllTrainNodesInterface.hxx  ExternalTrainDbEntry.hxx  FindProtocolServer.hxx  TrainDb.hxx  TrainDbCdi.hxx  TrainDbDefs.hxx
components/TrainSearchProtocol/private_include/: XmlGenerator.hxx
components/TurnoutManager/: CMakeLists.txt  GenericTurnout.cpp  OpenLCBTurnout.cpp  TurnoutManager.cpp  turnout_constants.cpp
components/TurnoutManager/include/: Turnouts.h
components/ULPADC/: CMakeLists.txt  UlpAdc.cpp  UlpAdcEsp32S3.cpp  adc_ops.S
components/ULPADC/include/: UlpAdc.hxx
components/Utils/: CDIClient.cpp  CDIDownloader.cpp  CMakeLists.txt  FileSystem.cpp
components/Utils/include/: AutoPersistCallbackFlow.h  CDIClient.hxx  CDIDownloader.hxx  DelayRebootHelper.hxx  EventBroadcastHelper.hxx  FactoryResetHelper.hxx  FileSystem.hxx  HealthMonitor.hxx  NodeIdMemoryConfigSpace.hxx  NodeRebootHelper.hxx  OTAWatcher.hxx  Spinlock.hxx  StringUtils.hxx  ThermalMonitorFlow.hxx
components/WiThrottle/: CMakeLists.txt  WiThrottleClientFlow.cpp  WiThrottleCmdBase.cpp  WiThrottleCmdPacket.cpp  WiThrottleCmdPanel.cpp  WiThrottleCmdRoster.cpp  WiThrottleCmdThrottle.cpp  WiThrottleCmdThrottleLegacy.cpp  WiThrottleConstants.cpp  WiThrottleServer.cpp
components/WiThrottle/include/: WiThrottle.hxx
main/: CMakeLists.txt  ESP32Bootloader.cpp  ESP32CommandStation.cpp  ESP32TrainDatabase.cpp  ESP32TrainDatabase.h  Esp32BootloaderHal.hxx  Esp32CoreDumpUtil.cpp  FileSystem.cpp  Kconfig.projbuild  OTAMonitor.h  OpenMRNEsp32Overrides.cpp  SimplifiedCallbackEventHandler.h  StatusDisplay.cpp  StatusDisplayLCD.cpp  ThermalConfiguration.hxx  ThermalMonitorFlow.hxx  WebServer.cpp  cdi.hxx
main/DCC/: LocomotiveConsist.cpp
main/Interfaces/nextion/: NextionInterface.cpp  NextionInterface.h  NextionInterfaceAddressPage.cpp  NextionInterfaceBasePage.cpp  NextionInterfaceSetupPage.cpp  NextionInterfaceThrottlePage.cpp  NextionInterfaceTurnoutPage.cpp
(+959 files in other folders)
